Fix responsive layout issues

--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -23,13 +23,5 @@
         &:hover {
             color: $link-color;
         }
-
-        &:last-child {
-            float: right;
-
-            @include respond-min($screen-tablet) {
-                float: none;
-            }
-        }
     }
 }
