--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -18,6 +18,7 @@
     display: table;
     height: 100%;
     left: 0;
+    padding-bottom: 24px; // make sure content clears the footer
     position: relative;
     transform: none;
     transition: transform 500ms ease;
@@ -157,6 +158,7 @@
     .tab__content {
         @include respond-min($screen-desktop) {
             display: table-cell;
+            vertical-align: top;
             width: 70%;
         }
     }
@@ -166,6 +168,8 @@
 
         @include respond-min($screen-desktop) {
             display: table-cell;
+            padding-left: 20px;
+            vertical-align: top;
             width: 30%;
         }
     }
